Correct collections qtips to wrap text and apear only on click. Linkify the mail to :p fixes #501

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2289,3 +2289,8 @@ dd
   list-style-type:disc;
   margin-left:2em;
 }
+
+.col_extd_info
+{
+  word-wrap: break-word; 
+}
